# LuckSudC

./: .gitignore
Collections/: CMakeLists.txt  Collections.h  List.c  List.h
Config/: CMakeLists.txt  Config.c  Config.h  Parser.c  Parser.h  README.md  String.c  String.h  TextFile.c  TextFile.h
Config/Types/: ValueArray.c  ValueArray.h  ValueDouble.c  ValueDouble.h  ValueInt.c  ValueInt.h  ValueString.c  ValueString.h  ValueStruct.c  ValueStruct.h  ValueType.c  ValueType.h  ValueTypeFormat.h
TestCollections/: CMakeLists.txt  main.c
TestConfig/: CMakeLists.txt  main.c  test.conf
